Adiciona mais conteúdo ao HTML

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ footer {
     <nav>
         <a>Atendimento</a> |
         <a>Lançamento</a> |
+        <a>Sobre a editora</a> |
         <a>Sobre a autora</a>
     </nav>
 
@@ -215,7 +216,9 @@ footer {
             <br/>Com base nas Escrituras, Gabriella nos encoraja a abandonar padrões mundanos e abraçar os desígnios de Deus para nossas vidas. Ela nos lembra que, assim como as estações da natureza, nossas vidas passam por diferentes fases, cada uma com seu propósito e ensinamento transformando-se em oportunidades para descobrir o amor e a providência divina. <br/>
 
 
-            <br/>Esta obra será especialmente relevante para mulheres que desejam fortalecer sua espiritualidade encontrando um propósito mais profundo através de uma vida extraordinariamente comum.
+            <br/>Esta obra será especialmente relevante para mulheres que desejam fortalecer sua espiritualidade encontrando um propósito mais profundo através de uma vida extraordinariamente comum.<br/>
+
+            <br/>ESpero que você, mulher, possa desfrutar do mais belo extraordinário de Deus!
        
         </p>
     </article>
