Adiciona seção de depoimentos e melhora a navegação

--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@ header {
     text-align: center;
     font-size: 15px;
     color: white;
-}
-
-
-nav {
     background-color: #aeb79d;
     padding: 9px;
     text-align: center;
@@ -189,11 +185,17 @@ footer {
 
 
     <nav>
-        <a>Atendimento</a> |
-        <a>Lançamento</a> |
-        <a>Sobre a editora</a> |
-        <a>Sobre a autora</a>
+        <a href="#atendimento">Atendimento</a> |
+        <a href="#lancamento">Lançamento</a> |
+        <a href="#sobre-editora">Sobre a editora</a> |
+        <a href="#sobre-autora">Sobre a autora</a>
     </nav>
+    
+    <section id="depoimentos">
+        <h2>Depoimentos de Leitores</h2>
+        <p>"Este livro mudou minha vida!" - Leitor 1</p>
+        <p>"Uma leitura inspiradora." - Leitor 2</p>
+    </section>
 
 
     <div class="row">
