Adiciona seção sobre os autores e melhora a descrição do livro

--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@ footer {
         </div>
     </div>
 
+    <section id="autores">
+        <h2>Sobre os Autores</h2>
+        <p>Gabriella Dinair é uma autora apaixonada por literatura e espiritualidade, trazendo suas experiências pessoais e ensinamentos para suas obras.</p>
+        <p>Ela acredita que cada livro é uma oportunidade de transformação e autoconhecimento.</p>
+    </section>
 
     <article>
         <h1>Meu Primeiro Livro!!!!</h1>
